# la-patate-chaude

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: client.rs  main.rs  utils.rs
client/src/utils/: mod.rs  utils.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: challenge.rs  lib.rs  messages.rs
shared/src/messages/: messages.rs  mod.rs
