[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
md5 = "0.7.0"
shared = { path = "../shared" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"